[package]
name = "schedual"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
cli-table = "0.4"
itertools = "0.10"
chrono = "0.4"
egui = "0.19"
eframe = { version = "0.19", features = ["persistence"] }
smallvec = { version = "1", features = ["serde", "const_new"] }
fxhash = "0.2"

[profile.release]
debug = true
